# trading_terminal

./: .gitignore  .ocamlformat  CONTRIBUTING.md  README.md  dune-project  trading_terminal.opam
lib/: coingecko.ml  crypto_api.ml  dune  logger.ml  market_data.ml  trading_terminal_lib.ml  types.ml  ui.ml
test/: dune
